--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
+.App {}
+
+body {
+  background: linear-gradient(90deg, #DCDCDC, #D3D3D3 10%);
+  width: 100vw;
+  height: 100vh;
+}
+
+.App h1 {
   text-align: center;
+  padding: 35px 0;
+  font-size: 45px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: rgb(38, 50, 56);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* body {
+  background: linear-gradient(rgb(180, 30, 30), rgb(71, 8, 8))
+} */
