--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-.App {}
+.App {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   background: linear-gradient(90deg, #DCDCDC, #D3D3D3 10%);
-  width: 100vw;
-  height: 100vh;
 }
 
 .App h1 {
