--- a/src/components/PokedexAll/PokedexAll.css
+++ b/src/components/PokedexAll/PokedexAll.css
@@ -5,7 +5,13 @@
   margin: auto;
   text-align: center;
   justify-content: center;
+  padding: 0 50px;
+}
 
+.pkmContainer__father h1 {
+  display: block;
+  text-align: center;
+  color: red;
 }
 
 .pkmContainer__children {
@@ -21,7 +27,6 @@
   font-style: italic;
   color: white;
   overflow: hidden;
-
 }
 
 .pkmContainer__children:hover {
