--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,12 @@ body {
 }
 
 .App h1 {
-  text-align: center;
-  padding: 35px 0;
-  font-size: 45px;
-  font-weight: 500;
-  text-transform: uppercase;
-  color: rgb(38, 50, 56);
+
+}
+
+.blabla {
+  display: hidden;
+  color: red;
 }
 
 /* body {
