--- a/src/components/Paginacao/Paginacao.css
+++ b/src/components/Paginacao/Paginacao.css
@@ -11,10 +11,26 @@
   width: 100px;
 }
 
+/* .loadingImg__father {
+  display: none;
+} */
+
+.loadingImg__father#active {
+  display: block;
+}
+
 .loadingArrow__father:hover {
   transform: scale(1.3);
   transition: ease-in-out 0.3s;
   cursor: pointer;
+}
+
+/* .loadingArrow__father {
+  display: none;
+} */
+
+.loadingArrow__father#active {
+  display: block;
 }
 
 /* .paginacaoFather {
